--- a/css/needle.css
+++ b/css/needle.css
@@ -149,3 +149,58 @@ span{
 padding-left: 300px;
 padding-right: 300px;
 }
+.text{
+    background-color: blue;
+    color:white;
+    padding-top: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+    font-size: 23px;
+    border: 1px solid #BFBFBF;
+    border-radius: 0px 6px 6px 0px;
+}
+.map{
+    z-index: 0;
+    position: absolute;
+    width: 100%;
+}
+.form{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    row-gap: 15px;
+    column-gap: 20px;
+    padding-top: 20px;
+}
+.base{
+    display: grid;
+    grid-template-columns: auto 350px;
+    height: 500px;
+    width: 950px;
+    padding-left: 80px;
+    z-index: 1;
+    position:relative;
+    padding-top: 280px;
+    
+}
+.formcont{
+    background-color: white;
+    border-radius: 6px 0px 0px 6px;
+    box-shadow: 2px #aaaaaa;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.formitem{
+    height: 50px;
+    width:300px;
+    padding-top: 15px;
+    border-bottom: 1px solid gray;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    
+
+}
+.fa fa-user-o{
+    padding-top: 30px;
+}
